--- a/src/scss/frontend/_grid.scss
+++ b/src/scss/frontend/_grid.scss
@@ -2,7 +2,7 @@ $breakpoints: $grid-breakpoints;
 $columns: $grid-columns;
 
 .grid {
-    --wp--style--block-gap: 0px;
+    --wp--style--block-gap: var(--wp--custom--gutter, 1rem);
     --wp--columns: 12;
     --wp--column-min: 0px;
     --wp--gap-count: calc(var(--wp--columns) - 1);
